<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastrar_pergunta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/quiz_background_bord"
    tools:context="com.example.joaopaulo.quizapp.CadastrarPerguntaActivity">

    <TextView
        android:background="@color/cardview_dark_background"
        android:textColor="@color/cardview_light_background"
        android:textSize="28dp"
        android:layout_height="36dp"
        android:text="@string/titulo_cadastro_pergunta"
        android:textAlignment="center"
        android:id="@+id/txt_titulo_cadastro_pergunta"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="372dp" />

    <ImageView
        android:layout_width="335dp"
        android:layout_height="151dp"
        app:srcCompat="@drawable/img_default"
        android:id="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_40_2"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_cadastro_pergunta"
        android:layout_marginTop="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_40_2"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="204dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_90"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="460dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.9" />

    <RadioGroup
        android:id="@+id/rg_cadastro_perguntas"
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_titulo_cadastro_pergunta"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_15"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_55"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_87">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_cadastro_alternativa_1"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_cadastro_alternativa_2"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_cadastro_alternativa_3"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_cadastro_alternativa_4"
            android:layout_weight="1" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_v_15"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="58dp"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_v_35"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="134dp"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:text="@string/cadastro_pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cadastro_pergunta"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_15"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_55"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_40_2"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:text="@string/cadastro_pergunta"
        android:layout_width="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edt_cadastro_pergunta"
        android:background="@android:drawable/edit_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_40_2"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_35"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_55"
        android:layout_marginBottom="8dp"
        android:singleLine="false"
        android:layout_height="76dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_55"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="281dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_63"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="322dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_71"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="363dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.71" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_79"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="404dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.79" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdl_h_87"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="445dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.87" />

    <TextView
        android:text="@string/cadastro_alternativa_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cadastro_alternativa_1"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_55"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_63"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_35"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_15"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:text="@string/cadastro_alternativa_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cadastro_alternativa_2"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_63"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_71"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_15"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/cadastro_alternativa_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cadastro_alternativa_3"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_15"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_71"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_79"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/cadastro_alternativa_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cadastro_alternativa_4"
        app:layout_constraintRight_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_15"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_79"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_87"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPersonName"
        android:text="@string/cadastro_alternativa_1"
        android:ems="10"
        android:id="@+id/edt_cadastro_alternativa_1"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_63"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_55" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPersonName"
        android:text="@string/cadastro_alternativa_2"
        android:ems="10"
        android:id="@+id/edt_cadastro_alternativa_2"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_71"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_63"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_35"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPersonName"
        android:text="@string/cadastro_alternativa_3"
        android:ems="10"
        android:id="@+id/edt_cadastro_alternativa_3"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_79"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_71"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_35" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPersonName"
        android:text="@string/cadastro_alternativa_4"
        android:ems="10"
        android:id="@+id/edt_cadastro_alternativa_4"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/gdl_v_35"
        app:layout_constraintBottom_toTopOf="@+id/gdl_h_87"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_79" />

    <Button
        android:text="@string/cadastro_botao_gravar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_gravar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gdl_h_87" />


</android.support.constraint.ConstraintLayout>
